name:                kicadda
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Daniel Gröber
maintainer:          dxld@darkboxed.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable kicadda
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base          >= 4.9     && < 4.10
                     , split         >= 0.2.3.1 && < 0.3
                     , megaparsec    >= 5.1.2   && < 5.2
                     , pretty-show   >= 1.6.12  && < 1.7
                     , haskelzinc    >= 0.2.0.3 && < 0.2
                     , containers    >= 0.5.8.1 && < 0.6
                     , haskelzinc    >= 0.2.0.3 && < 0.3
                     , zenc          == 0.1.1
--                     , regex-tdfa
                     , edit-distance >= 0.2.2.1 && < 0.3
                     , process       >= 1.4.2.0 && < 1.5
                     , temporary     >= 1.2.0.4 && < 1.3
